[gd_scene load_steps=6 format=3 uid="uid://bg8ghn24uo0cr"]

[ext_resource type="Script" uid="uid://b2ail0itjyaba" path="res://material_maker/nodes/remote/remote.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c0j4px4n72di5" path="res://material_maker/icons/icons.tres" id="2"]

[sub_resource type="Theme" id="1"]

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("2")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("2")
region = Rect2(32, 32, 16, 16)

[node name="Remote" type="GraphNode"]
offset_right = 95.0
offset_bottom = 52.0
mouse_filter = 1
theme = SubResource("1")
title = "Remote"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(0.5, 0.5, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(0.5, 0.5, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1")

[node name="Controls" type="GridContainer" parent="."]
layout_mode = 2
columns = 7

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddLink" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Add linked control"
icon = SubResource("2")

[node name="AddConfig" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Add configurations"
icon = SubResource("3")

[node name="AddNamed" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Add named parameter"
text = "ab"

[connection signal="pressed" from="HBoxContainer/AddLink" to="." method="_on_AddLink_pressed"]
[connection signal="pressed" from="HBoxContainer/AddConfig" to="." method="_on_AddConfig_pressed"]
[connection signal="pressed" from="HBoxContainer/AddNamed" to="." method="_on_AddNamed_pressed"]
